--- a/Simple 2D Physics Engine.vcxproj
+++ b/Simple 2D Physics Engine.vcxproj
@@ -137,16 +137,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\Physics2D\Core.h" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Particle.cpp" />
-    <ClCompile Include="src\Renderer.cpp" />
-    <ClCompile Include="src\Vector2.cpp" />
+    <ClCompile Include="src\Physics2D\Particle.cpp" />
+    <ClCompile Include="src\Physics2D\Renderer.cpp" />
+    <ClCompile Include="src\Physics2D\Math\Vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Particle.h" />
-    <ClInclude Include="src\Precisions.h" />
-    <ClInclude Include="src\Renderer.h" />
-    <ClInclude Include="src\Vector2.h" />
+    <ClInclude Include="include\Physics2D\Particle.h" />
+    <ClInclude Include="include\Physics2D\Precisions.h" />
+    <ClInclude Include="include\Physics2D\Renderer.h" />
+    <ClInclude Include="include\Physics2D\Math\Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
